--- a/Presentation.Dashboard/Views/Shared/_Layout.cshtml
+++ b/Presentation.Dashboard/Views/Shared/_Layout.cshtml
@@ -6,12 +6,14 @@
     <title>@ViewData["Title"] - WebApplication</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="~/css/feather.css">
-
     <link href="~/fontawesome-pro-5.2.0-web/css/fontawesome.css" rel="stylesheet" />
-
     <link rel="stylesheet" href="~/css/chartist.css" type="text/css" media="all">
-
     <link rel="stylesheet" type="text/css" href="~/css/style.css">
+    <link href="~/Kendoui/css/kendo.bootstrap-v4.min.css" rel="stylesheet" />
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/Kendoui/js/kendo.all.min.js"></script>
+    <script src="~/Kendoui/js/jszip.min.js"></script>
+    <script src="~/Kendoui/js/kendo.aspnetmvc.min.js"></script>
 </head>
 <body>
     <div class="loader-bg">
@@ -216,7 +218,6 @@
         </div>
     </div>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/pcoded.min.js" type="d2d1d6e2f87cbebdf4013b26-text/javascript"></script>
     <script src="~/js/vertical-layout.min.js" type="d2d1d6e2f87cbebdf4013b26-text/javascript"></script>
