--- a/Presentation.Dashboard/Views/Shared/_Layout.cshtml
+++ b/Presentation.Dashboard/Views/Shared/_Layout.cshtml
@@ -39,8 +39,7 @@
                             </li>
                             @* Thông báo *@
                         <li class="header-notification">
-                            @*<partial name="~/Views/Shared/Header/NotificationView.cshtml" />*@
-                            @await Html.PartialAsync("_SetLanguagePartial")
+                            <partial name="~/Views/Shared/Header/NotificationView.cshtml" />
                         </li>
                             @* Người dùng login *@
                             <li class="user-profile header-notification">
