--- a/Presentation.Dashboard/Views/Shared/Header/LanguageView.cshtml
+++ b/Presentation.Dashboard/Views/Shared/Header/LanguageView.cshtml
@@ -1,19 +1,26 @@
-﻿<div data-toggle="dropdown" class="dropdown-header dropdown-toggle">
-    <img class="img-language" src="~/Images/Language/flag_VN.png" alt="Girl in a jacket">
-    <div class="show-notification dropdown-menu" style=" width: 110px; padding: 0 0; margin: 5px 19px 0 0;">
-        <a class="dropdown-item" href="#"><img class="img-language-select" src="~/Images/Language/flag_VN.png" alt="Vietnamese"><span class="text-lang">Tiếng việt</span></a>
-        <a class="dropdown-item" href="#"><img class="img-language-select img-custom" src="~/Images/Language/flag_EN.png" alt="Vietnamese"><span class="text-lang">Tiếng anh</span></a>
-    </div>
-</div>
+﻿@using Microsoft.AspNetCore.Builder
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.Extensions.Options
 
-<style>
-    .img-language-select {
-        padding: 0 4px 3px 0;
-    }
-    .img-language {
-        margin: 2px -3px 0 0;
-    }
-    .img-custom {
-        height: 28px;
-    }
-</style>
+@inject IViewLocalizer Localizer
+@inject IOptions<RequestLocalizationOptions> LocOptions
+@{
+    var requestCulture = Context.Features.Get<IRequestCultureFeature>();
+    var cultureItems = LocOptions.Value.SupportedUICultures
+        .Select(c => new SelectListItem { Value = c.Name, Text = c.DisplayName })
+        .ToList();
+}
+
+<div>
+    <form asp-controller="Culture"
+          asp-action="SetLanguage"
+          asp-route-returnUrl="@Context.Request.Path"
+          method="post">
+        <select name="culture"
+                onchange="this.form.submit();"
+                asp-for="@requestCulture.RequestCulture.UICulture.Name"
+                asp-items="cultureItems">
+        </select>
+    </form>
+</div>
